tests/testing_data/anonymized_testing_data/invalid_data/invalid_fields/noImgType.dcm
version https://git-lfs.github.com/spec/v1
oid sha256:db9b15c9f6b9fce287314bccad070f0d303b233d03c2156c53c9f8d4d56b2551
size 64842
